--- a/4_colores.html
+++ b/4_colores.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafío ejercicio 4</title>
 </head>
+
 <body>
-    
+
+    <!--Crea 4 divs que tengan alto y ancho de 200px y de colores azul, rojo, verde y amarillo-->
+
+    <div id="primera-parte" style="display: flex; justify-content: center;">
+
+        <div id="azul" style="width: 200px; height: 200px; background-color: blue"></div>
+        <div id="rojo" style="width: 200px; height: 200px; background-color: red"></div>
+        <div id="verde" style="width: 200px; height: 200px; background-color: green"></div>
+        <div id="amarillo" style="width: 200px; height: 200px; background-color: yellow"></div>
+
+    </div>
+
+    <!--Crea 4 divs que tengan alto y ancho de 200px y de colores azul, rojo, verde y amarillo-->
+
+    <div id="key" style="width: 200px; height: 200px; background-color: white; border: 2px solid black ;"></div>
+
+
+    <script src="./assets/js/4_colores.js"></script>
 </body>
+
 </html>
