Desafío, ejercicio 4, parte 2

--- a/4_colores.html
+++ b/4_colores.html
@@ -20,9 +20,17 @@
 
     </div>
 
-    <!--Crea 4 divs que tengan alto y ancho de 200px y de colores azul, rojo, verde y amarillo-->
+    <!--Crea un nuevo div con el id "key"-->
 
-    <div id="key" style="width: 200px; height: 200px; background-color: white; border: 2px solid black ;"></div>
+    <div id="segunda-parte" style="display: flex; justify-content: center; margin: 20px; ">
+
+        <div id="key" style="width: 200px; height: 200px; background-color: white; border: 2px solid black; "></div>
+
+    </div>
+
+    
+
+    <div id="contenedor"></div>
 
 
     <script src="./assets/js/4_colores.js"></script>
