Desafío ejercicio 4, parte 3

--- a/4_colores.html
+++ b/4_colores.html
@@ -11,7 +11,7 @@
 
     <!--Crea 4 divs que tengan alto y ancho de 200px y de colores azul, rojo, verde y amarillo-->
 
-    <div id="primera-parte" style="display: flex; justify-content: center;">
+    <div id="primera-parte" style="display: flex; justify-content: center; margin: 20px; ">
 
         <div id="azul" style="width: 200px; height: 200px; background-color: blue"></div>
         <div id="rojo" style="width: 200px; height: 200px; background-color: red"></div>
@@ -28,10 +28,13 @@
 
     </div>
 
+    <!--Crear un contenedor en el que se creen divs al presionar las teclas q, w, e"-->
     
+<div id="tercera-parte"></div>
 
-    <div id="contenedor"></div>
+    <div id="contenedor" style="display: flex; justify-content: center; margin: 20px; ">
 
+    </div>
 
     <script src="./assets/js/4_colores.js"></script>
 </body>
